--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
             <!-- Sidebar End  -->
 
 
-            <!-- News Item Start  -->
+           
             <div class="container2">
 
 
 
                 <div class="game">
-                    <div class="thumbnail">
+                    <div class="show">
                         <img src="images/Blog Image.png" alt="">
                     </div>
                     <div class="game-detail">
@@ -79,7 +79,7 @@
 
 
                 <div class="game">
-                    <div class="thumbnail">
+                    <div class="show">
                         <img src="images/Blog Image.png" alt="">
                     </div>
                     <div class="game-detail">
@@ -100,7 +100,7 @@
 
 
                 <div class="game">
-                    <div class="thumbnail">
+                    <div class="show">
                         <img src="images/Blog Image.png" alt="">
                     </div>
                     <div class="game-detail">
@@ -118,7 +118,7 @@
                 </div>
 
                 <div class="game">
-                    <div class="thumbnail">
+                    <div class="show">
                         <img src="images/Blog Image.png" alt="">
                     </div>
                     <div class="game-detail">
@@ -135,7 +135,7 @@
                 </div>
 
                 <div class="game">
-                    <div class="thumbnail">
+                    <div class="show">
                         <img src="images/Blog Image.png" alt="">
                     </div>
                     <div class="game-detail">
@@ -154,7 +154,7 @@
                 </div>
 
                 <div class="game">
-                    <div class="thumbnail">
+                    <div class="show">
                         <img src="images/Blog Image.png" alt="">
                     </div>
                     <div class="game-detail">
