--- a/upcoming.html
+++ b/upcoming.html
@@ -57,10 +57,10 @@
 
               
                 <div class="match-item">
-                    <div class="match-thumbnail">
-                        <img class="match-thumbnail-item" src="images/germany Flag.png" alt="">
-                        <h3 class="match-thumbnail-item">VS</h3>
-                        <img class="match-thumbnail-item" src="images/Flag.png" alt="">
+                    <div class="match-pic">
+                        <img class="match-pic-item" src="images/germany Flag.png" alt="">
+                        <h3 class="match-pic-item">VS</h3>
+                        <img class="match-pic-item" src="images/Flag.png" alt="">
                     </div>
                     <div class="match-item-detail">
                         <p class="match-title">Germany VS France</p>
@@ -70,10 +70,10 @@
 
 
                 <div class="match-item">
-                    <div class="match-thumbnail">
-                        <img class="match-thumbnail-item" src="images/germany Flag.png" alt="">
-                        <h3 class="match-thumbnail-item">VS</h3>
-                        <img class="match-thumbnail-item" src="images/Flag.png" alt="">
+                    <div class="match-pic">
+                        <img class="match-pic-item" src="images/germany Flag.png" alt="">
+                        <h3 class="match-pic-item">VS</h3>
+                        <img class="match-pic-item" src="images/Flag.png" alt="">
                     </div>
                     <div class="match-item-detail">
                         <p class="match-title">Germany VS France</p>
@@ -83,10 +83,10 @@
 
 
                 <div class="match-item">
-                    <div class="match-thumbnail">
-                        <img class="match-thumbnail-item" src="images/germany Flag.png" alt="">
-                        <h3 class="match-thumbnail-item">VS</h3>
-                        <img class="match-thumbnail-item" src="images/Flag.png" alt="">
+                    <div class="match-pic">
+                        <img class="match-pic-item" src="images/germany Flag.png" alt="">
+                        <h3 class="match-pic-item">VS</h3>
+                        <img class="match-pic-item" src="images/Flag.png" alt="">
                     </div>
                     <div class="match-item-detail">
                         <p class="match-title">Germany VS France</p>
@@ -97,10 +97,10 @@
 
                 
                 <div class="match-item">
-                    <div class="match-thumbnail">
-                        <img class="match-thumbnail-item" src="images/germany Flag.png" alt="">
-                        <h3 class="match-thumbnail-item">VS</h3>
-                        <img class="match-thumbnail-item" src="images/Flag.png" alt="">
+                    <div class="match-pic">
+                        <img class="match-pic-item" src="images/germany Flag.png" alt="">
+                        <h3 class="match-pic-item">VS</h3>
+                        <img class="match-pic-item" src="images/Flag.png" alt="">
                     </div>
                     <div class="match-item-detail">
                         <p class="match-title">Germany VS France</p>
@@ -110,10 +110,10 @@
 
 
                 <div class="match-item">
-                    <div class="match-thumbnail">
-                        <img class="match-thumbnail-item" src="images/germany Flag.png" alt="">
-                        <h3 class="match-thumbnail-item">VS</h3>
-                        <img class="match-thumbnail-item" src="images/Flag.png" alt="">
+                    <div class="match-pic">
+                        <img class="match-pic-item" src="images/germany Flag.png" alt="">
+                        <h3 class="match-pic-item">VS</h3>
+                        <img class="match-pic-item" src="images/Flag.png" alt="">
                     </div>
                     <div class="match-item-detail">
                         <p class="match-title">Germany VS France</p>
@@ -123,10 +123,10 @@
 
 
                 <div class="match-item">
-                    <div class="match-thumbnail">
-                        <img class="match-thumbnail-item" src="images/germany Flag.png" alt="">
-                        <h3 class="match-thumbnail-item">VS</h3>
-                        <img class="match-thumbnail-item" src="images/Flag.png" alt="">
+                    <div class="match-pic">
+                        <img class="match-pic-item" src="images/germany Flag.png" alt="">
+                        <h3 class="match-pic-item">VS</h3>
+                        <img class="match-pic-item" src="images/Flag.png" alt="">
                     </div>
                     <div class="match-item-detail">
                         <p class="match-title">Germany VS France</p>
