--- a/upcoming.html
+++ b/upcoming.html
@@ -23,7 +23,7 @@
     <!-- Main Section Start  -->
     <main>
         <!-- Hero Section Start  -->
-        <section class="container banner">
+        <section class="container hero">
             <div class="half-width">
                 <h1>The Greatest show on the earth</h1>
                 <p>The first competition for the cup was organized in 1930 by the Fédération Internationale de Football Association (FIFA) and was won by Uruguay</p>
