--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
 </head>
 
 <body>
-
+    
     <!-- Header Section Start  -->
 
     <!-- Main Section Start  -->
-    <main>
+     <main>
        
-        <section class="container banner">
-            <div class="half-width">
-                <h1>The Greatest show on the earth</h1>
-                <p>The first competition for the cup was organized in 1930 by the Fédération Internationale de Football Association (FIFA) and was won by Uruguay.</p>
-                <a href="" class="button">Watch Live <i class="fa-solid fa-angle-right"></i></a>
-            </div>
-            <div class="half-width">
-                <img src="images/Banner Image.png" alt="">
-            </div>
+         <section class="container hero"> 
+             <div class="half-width"> 
+                 <h1>The Greatest show on the earth</h1>
+                 <p>The first competition for the cup was organized in 1930 by the Fédération Internationale de Football Association (FIFA) and was won by Uruguay.</p>
+                 <a href="" class="button">Watch Live <i class="fa-solid fa-angle-right"></i></a>
+             </div> 
+             <div class="half-width"> 
+                <img src="images/Banner Image.png" alt=""> 
+           </div>
         </section>
         <!-- Hero Section End  -->
 
